ci: add github-token to build-push-action for GHA cache API throttle avoidance

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,4 @@ jobs:
           push: false
           cache-from: type=gha,scope=linux-x86_64
           cache-to: type=gha,mode=max,scope=linux-x86_64
+          github-token: ${{ github.token }}
