fix: add missing smoke test scripts and test fixtures
- scripts/smoke-test-wine.sh: Wine CLI smoke tests for Windows .exe
- scripts/smoke-test-docker.sh: orchestrator for Docker-based smoke tests
- test/fixtures/*.png: test images for smoke tests
- scripts/smoke-test-cli.sh: support LV_FIXTURES/LV_DB_PATH env vars
- docker/Dockerfile.linux-aarch64: multi-stage with smoke test + .deb output
- .dockerignore: exclude more build artifacts
- .gitignore: stop ignoring test fixture PNGs
- Makefile: add docker-smoke target

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,13 @@
 target/
+target-*/
 dist/
 build-installer/
+AppDir/
 .git/
+.github/
+.cargo/
+*.deb
+*.AppImage
+*.exe
+screenshot01.jpg
+test/screenshots/
