--- a/docker/Dockerfile.windows-x86_64
+++ b/docker/Dockerfile.windows-x86_64
@@ -23,9 +23,9 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     llvm clang nsis p7zip-full
 
 RUN curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | \
-    sh -s -- -y --default-toolchain stable --profile minimal \
-    -t x86_64-pc-windows-msvc
+    sh -s -- -y --default-toolchain stable --profile minimal
 ENV PATH="/root/.cargo/bin:${PATH}"
+RUN rustup target add x86_64-pc-windows-msvc
 ENV CARGO_INCREMENTAL=0
 
 RUN cargo install cargo-xwin --locked
@@ -40,27 +40,17 @@ COPY pkg/win64/ pkg/win64/
 COPY scripts/cargo-cache-clean.sh /usr/local/bin/cargo-cache-clean
 # Dummy main.rs so cargo can resolve the crate graph and build deps
 RUN mkdir src && echo 'fn main() {}' > src/main.rs
-RUN --mount=type=cache,target=/root/.cargo/registry \
-    --mount=type=cache,target=/root/.cargo/git \
-    --mount=type=cache,target=/src/target \
-    cargo xwin build --release --target x86_64-pc-windows-msvc 2>&1 \
+RUN cargo xwin build --release --target x86_64-pc-windows-msvc 2>&1 \
     || true
-# Clean own crate artifacts + prune cache mounts
-RUN --mount=type=cache,target=/root/.cargo/registry \
-    --mount=type=cache,target=/root/.cargo/git \
-    --mount=type=cache,target=/src/target \
-    sh /usr/local/bin/cargo-cache-clean
+# Clean dummy crate artifacts so real source triggers recompile of lv only
+RUN sh /usr/local/bin/cargo-cache-clean
 
 # ── Stage: build (compile lv only) ───────────────────────────────────
 FROM deps AS build
 
 COPY . .
-RUN --mount=type=cache,target=/root/.cargo/registry \
-    --mount=type=cache,target=/root/.cargo/git \
-    --mount=type=cache,target=/src/target \
-    cargo xwin build --release --target x86_64-pc-windows-msvc \
-    && cp target/x86_64-pc-windows-msvc/release/lv.exe /tmp/lv.exe \
-    && sh /usr/local/bin/cargo-cache-clean
+RUN cargo xwin build --release --target x86_64-pc-windows-msvc \
+    && cp target/x86_64-pc-windows-msvc/release/lv.exe /tmp/lv.exe
 
 # ── Stage: package (NSIS installer) ──────────────────────────────────
 FROM build AS package
