--- a/docker/Dockerfile.linux-x86_64
+++ b/docker/Dockerfile.linux-x86_64
@@ -38,14 +38,13 @@ WORKDIR /src
 FROM base AS deps
 
 COPY Cargo.toml Cargo.lock build.rs ./
-COPY scripts/cargo-cache-clean.sh /usr/local/bin/cargo-cache-clean
 # Dummy main.rs so cargo can resolve the crate graph and build deps
 RUN mkdir src && echo 'fn main() {}' > src/main.rs
 RUN cargo build --release --target x86_64-unknown-linux-gnu 2>&1 \
     && cargo build --target x86_64-unknown-linux-gnu 2>&1 \
     || true
-# Clean dummy crate artifacts so real source triggers recompile of lv only
-RUN sh /usr/local/bin/cargo-cache-clean
+# No cleanup needed: when COPY . . replaces src/main.rs, cargo's fingerprint
+# system detects the change and recompiles only lv (deps stay cached).
 
 # ── Stage: build (compile lv only) ───────────────────────────────────
 FROM deps AS build
